--- a/_sass/theme/_air_dark.scss
+++ b/_sass/theme/_air_dark.scss
@@ -3,12 +3,12 @@
    ========================================================================== */
 
 /* Color codes used for the theme */
-$primary-color              : #01b8b8;
+$primary-color              : #00adb5;
 $dark-primary-color         : mix(#000, $primary-color, 40%);
 $darker-primary-color       : mix(#000, $primary-color, 60%);
 $light-primary-color        : mix(#000, $primary-color, 50%);
 
-$background                 : #000435;
+$background                 : #252a34;
 $background-light           : mix(#fff, $background, 20%);
 $background-lighter         : mix(#fff, $background, 90%);
 $text                       : #eaeaea;
