--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -81,7 +81,6 @@
 /* DOI links */
 .research-list a.doi {
   font-size: 0.9em;
-  color: #666;
   text-decoration: none;
   margin-left: 0.35em;
 }
@@ -109,8 +108,8 @@
 }
 
 .badge.forthcoming {
-  background: #f3f3f3;
-  color: #555;
+  background: #e6f2ff;
+  color: #003366;
 }
 
 .badge.review {
