--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -181,6 +181,12 @@
   border-bottom: none;
 }
 
+/* Remove divider line at the end of last heading */
+.article-card + h2 {
+  border-top: none;
+  margin-top: 2.5rem;
+}
+
 /* Optional spacing before next section */
 .article-card:has(+ h2) + h2 {
   margin-top: 1.5rem;
