--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -14,3 +14,24 @@
 <meta name="theme-color" content="#ffffff"/>
 
 <!-- end custom head snippets -->
+
+<!-- Schema.org Person markup -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Person",
+  "name": "Federico Trastulli",
+  "url": "https://federicotrastulli.github.io/",
+  "image": "https://federicotrastulli.github.io/images/1719964921051.png",
+  "jobTitle": "Political scientist / Researcher / Academic",
+  "sameAs": [
+    "https://www.linkedin.com/in/federicotrastulli",
+    "https://github.com/federicotrastulli",
+    "https://x.com/fedetrastulli",
+    "https://bsky.app/profile/fedetrastulli.bsky.social",
+    "https://scholar.google.com/citations?user=3qqwvK8AAAAJ&hl=it",
+    "https://www.researchgate.net/profile/Federico_Trastulli2?ev=hdr_xprf",
+    "https://www.dsu.univr.it/?ent=persona&id=79634&lang=it"
+  ]
+}
+</script>
