--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -15,6 +15,8 @@
 
 <!-- end custom head snippets -->
 
+<meta property="og:site_name" content="Federico Trastulli">
+
 <!-- Schema.org Person markup -->
 <script type="application/ld+json">
 {
