--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -13,10 +13,6 @@
 <link rel="icon" href="/images/w_favicon.ico"/>
 <meta name="theme-color" content="#ffffff"/>
 
-<!-- end custom head snippets -->
-
-<meta property="og:site_name" content="Federico Trastulli">
-
 <!-- Schema.org Person markup -->
 <script type="application/ld+json">
 {
@@ -37,3 +33,8 @@
   ]
 }
 </script>
+
+<meta property="og:site_name" content="Federico Trastulli">
+<meta property="og:title" content="Federico Trastulli">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://federicotrastulli.github.io">
